--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ build_flags =
     -Wl,-Map,firmware.map,--print-memory-usage
     ; Output debug symbols for gdb debugger.
     -g
+    ; Wrap the function __aeabi_dmul as __wrap___aeabi_dmul.
+    -Wl,-wrap,__aeabi_dmul
 
 ; Default linker script used is ~/.platformio/packages/framework-libopencm3/lib/stm32/f1/stm32f103x8.ld
 ; For Windows: %userprofile%\.platformio\packages\framework-libopencm3\lib\stm32\f1\stm32f103x8.ld
